SERVER-4729: log slow queries + improved test